# bazel_ios

./: .gitignore  MODULE.bazel  README.md  WORKSPACE
hello/app/: BUILD  ContentView.swift  HelloApp.swift
hello/dart/: BUILD  Dart.h  Info.plist  Magic.cpp  Magic.h  patch_framework.sh
hello/dart/Modules/: module.modulemap
