bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_xcodeproj", version = "2.5.2")
bazel_dep(
    name = "apple_support",
    version = "1.15.1",
    repo_name = "build_bazel_apple_support",
)
bazel_dep(
    name = "rules_swift",
    version = "2.1.1",
    repo_name = "build_bazel_rules_swift",
)
bazel_dep(
    name = "rules_apple",
    version = "3.6.0",
    repo_name = "build_bazel_rules_apple",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
    dev_dependency = True,
)

bazel_dep(name = "rules_pkg", version = "1.0.1")
